--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,6 @@
 <body>
   <div id="image">
   </div>
-  <script>http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js</script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
   <script>$('#image').append("Hello friend")</script>
 </body>
