--- a/html/index.html
+++ b/html/index.html
@@ -6,4 +6,6 @@
 <body>
   <div id="image">
   </div>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
+  <script>$('#image').append('<img id="theImg" src="https://s3.amazonaws.com/learn-verified/painting-with-dog.gif" alt="puppies and kids" />')</script>
 </body>
